@@ -43,6 +43,12 @@ AC_DEFINE_UNQUOTED(W3M_TARGET, $W3M_TARGET)
 AC_W3M_M17N
 AM_GNU_GETTEXT
 
+INTLTARGET=""
+if test x"$USE_NLS" = xyes; then
+  INTLTARGET="intl"
+fi
+AC_SUBST(INTLTARGET)
+
 AC_W3M_COLOR
 AC_W3M_ANSI_COLOR
 AC_W3M_BG_COLOR
